--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "node server/index.js",
+    "start": "node server/index.js",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "live": "npm run build && npm run start"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
